# mycobot_vision

./: 11  CMakeLists.txt  package.xml
Visual_tracking-main/: Flask.py  auto_record.py  camera_detect.py  camera_detect2.py  check_hdf5.py  fix_calibration.py  grasp.py  grasp_controller.py  grasp_test1.py  move_test  move_test.py  pi_collect.py  reset.py  robot_bridge.py  send_number.py  target_map.py  test.py  test2  test_grasp.py  uvc_camera.py
scripts/: EyesInHand_matrix.json  Flaskreceiver  OSCreceiver.py  detect_single_aruco_grasp.py  eye_hand_calibration.py  test_aruco.py  test_move.py
vision/: camera_detect.py
