<?xml version="1.0"?>
<package format="2">
  <name>mycobot_vision</name>
  <version>0.0.1</version>
  <description>MyCobot ArUco 视觉抓取示例</description>

  <maintainer email="dbhabd0244@gamil.com">Junzhe</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
